[gd_scene load_steps=4 format=2]

[ext_resource path="res://Playspace.gd" type="Script" id=1]
[ext_resource path="res://uno_dynamicfont.tres" type="DynamicFont" id=2]

[sub_resource type="CanvasItemMaterial" id=1]

[node name="Playspace" type="Node2D"]
script = ExtResource( 1 )

[node name="Cards" type="Node" parent="."]

[node name="DRAW" type="Button" parent="."]
margin_left = 25.0
margin_top = 282.0
margin_right = 141.0
margin_bottom = 326.0
__meta__ = {
"_editor_description_": "DRAW"
}

[node name="Label" type="Label" parent="DRAW"]
margin_right = 113.0
margin_bottom = 42.0
size_flags_stretch_ratio = 2.1
custom_fonts/font = ExtResource( 2 )
text = "DRAW"
align = 1
valign = 1

[node name="START" type="Button" parent="."]
margin_left = 25.0
margin_top = 209.0
margin_right = 141.0
margin_bottom = 253.0
__meta__ = {
"_editor_description_": "DRAW"
}

[node name="Label" type="Label" parent="START"]
margin_left = 1.0
margin_right = 114.0
margin_bottom = 42.0
size_flags_stretch_ratio = 2.1
custom_fonts/font = ExtResource( 2 )
text = "START"
align = 1
valign = 1

[node name="Reverse" type="Button" parent="."]
visible = false
material = SubResource( 1 )
margin_left = 443.0
margin_top = 2.0
margin_right = 543.0
margin_bottom = 152.0
text = "REVERSE"

[node name="ColorRect" type="ColorRect" parent="Reverse"]
margin_right = 101.0
margin_bottom = 147.0
color = Color( 0.141176, 0.886275, 0.133333, 1 )

[node name="Label" type="Label" parent="Reverse/ColorRect"]
margin_left = 7.0
margin_top = 57.0
margin_right = 88.0
margin_bottom = 85.0
text = "REVERSE"
align = 1
valign = 1

[node name="TopCard" type="Button" parent="."]
visible = false
margin_left = 440.0
margin_top = 228.0
margin_right = 540.0
margin_bottom = 378.0

[node name="Ticker" type="Label" parent="."]
margin_left = 792.0
margin_top = 259.0
margin_right = 984.0
margin_bottom = 311.0

[node name="RButton" type="Button" parent="."]
visible = false
margin_left = 550.0
margin_top = 230.0
margin_right = 580.0
margin_bottom = 260.0

[node name="ColorRect" type="ColorRect" parent="RButton"]
margin_right = 30.0
margin_bottom = 30.0
mouse_filter = 1
color = Color( 1, 0, 0, 1 )

[node name="Label" type="Label" parent="RButton/ColorRect"]
margin_right = 30.0
margin_bottom = 30.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "R"
align = 1
valign = 1

[node name="GButton" type="Button" parent="."]
visible = false
margin_left = 550.0
margin_top = 270.0
margin_right = 580.0
margin_bottom = 300.0

[node name="ColorRect" type="ColorRect" parent="GButton"]
margin_right = 30.0
margin_bottom = 30.0
mouse_filter = 1
color = Color( 0, 1, 0, 1 )

[node name="Label" type="Label" parent="GButton/ColorRect"]
margin_right = 30.0
margin_bottom = 30.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "G"
align = 1
valign = 1

[node name="BButton" type="Button" parent="."]
visible = false
margin_left = 550.0
margin_top = 310.0
margin_right = 580.0
margin_bottom = 340.0

[node name="ColorRect" type="ColorRect" parent="BButton"]
margin_right = 30.0
margin_bottom = 30.0
mouse_filter = 1
color = Color( 0, 0, 1, 1 )

[node name="Label" type="Label" parent="BButton/ColorRect"]
margin_right = 30.0
margin_bottom = 30.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "B"
align = 1
valign = 1

[node name="YButton" type="Button" parent="."]
visible = false
margin_left = 550.0
margin_top = 350.0
margin_right = 580.0
margin_bottom = 380.0

[node name="ColorRect" type="ColorRect" parent="YButton"]
margin_right = 30.0
margin_bottom = 30.0
mouse_filter = 1
color = Color( 0.87451, 1, 0, 1 )

[node name="Label" type="Label" parent="YButton/ColorRect"]
margin_right = 30.0
margin_bottom = 30.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Y"
align = 1
valign = 1

[node name="PopUpWindow" type="WindowDialog" parent="."]
margin_left = 347.0
margin_top = 218.0
margin_right = 692.0
margin_bottom = 338.0

[node name="LabelResult" type="Label" parent="PopUpWindow"]
margin_left = 34.0
margin_top = 19.0
margin_right = 308.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 2 )
align = 1
valign = 1

[node name="YesButton" type="Button" parent="PopUpWindow"]
margin_left = 209.0
margin_top = 63.0
margin_right = 285.0
margin_bottom = 98.0
text = "YES"

[node name="NoButton" type="Button" parent="PopUpWindow"]
margin_left = 51.0
margin_top = 64.0
margin_right = 127.0
margin_bottom = 99.0
text = "NO"

[connection signal="pressed" from="DRAW" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="START" to="." method="_on_START_pressed"]
[connection signal="pressed" from="RButton" to="." method="_on_RButton_pressed"]
[connection signal="pressed" from="GButton" to="." method="_on_GButton_pressed"]
[connection signal="pressed" from="BButton" to="." method="_on_BButton_pressed"]
[connection signal="pressed" from="YButton" to="." method="_on_YButton_pressed"]
[connection signal="pressed" from="PopUpWindow/YesButton" to="." method="_on_YesButton_pressed"]
